@@ -1,3 +1,7 @@
+2002-10-18  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* include/crc.h: Add extern definitions.
+
 2002-10-11  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/crc32.c (cyg_ether_crc32):
